--- a/Front-end of bank/src/banner/Banner.css
+++ b/Front-end of bank/src/banner/Banner.css
@@ -1,5 +1,10 @@
-.carousel-item img {
-    object-fit: cover;
-    max-height:450px;
-    
+.carousel-caption{
+position:relative;
+top:20%;
+transform: translateX(-20%);
+transform:translateY(-30%)
+
+}
+.crausel-desc{
+
 }
