--- a/Front-end of bank/src/header/Header.css
+++ b/Front-end of bank/src/header/Header.css
@@ -1,34 +1,116 @@
-.header__logo{
-    height: 50px;
-    object-fit: contain;
+.nav-container{
+    background-color: #f7f7f7;
 }
 
-.header__option{
-    display:flex;
-    flex-direction: column;
-    margin-left: 10px;
-    margin-right:10px;
-    justify-content: end;
+.nav-top{
+    border-top: 3px solid #ea8039;
+
 }
 
-.header__line2{
-    font-weight: bold;
-    font-size: 15px;
+.nav-top-fluid{
+   background-color: #ebebeb; 
 }
 
-.header__line1{
-    font-size:13px;
+.nav-logo{
+    width: 200px;
+    height: 80px;
 }
 
-.header__link {
-  color: white;
+.nav-middle{
+    background-color: #f7f7f7;
+}
+
+.nav a{
+    color: black;
+}
+
+
+.nav-link{
+  font-size:13px;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+
+.nav-tabs .nav-link {
+  font-family: Verdana, sans-serif;
+  font-size: 13px;
+  padding-top: 3px;
+  border-bottom: none;
+  line-height: 14px;
+  letter-spacing: 0.2px;
+}
+
+
+
+.nav-tabs .nav-link:hover {
+  font-family: Verdana, sans-serif;
+  color: #ea8039;
+}
+
+.middle-navbar{
+  font-family: Verdana, sans-serif;
+  color: black;
+  font-size: 14px;
+  box-sizing: border-box;
+  padding-right: 0px;
+  margin-left: 20px;
+  line-height: 18px;
+  letter-spacing: 0.15px;
+}
+
+.middle-navbar a{
+    color: rgb(51, 51, 51) !important; 
+    font-size:14px;
+    line-height: 18px;
+    letter-spacing: 0.15px;
+}
+
+.middle-navbar:hover{
+    color:#ea8039;
+     font-size:14px;
+    line-height: 18px;
+    letter-spacing: 0.15px;
+}
+
+.middle-navbar i{
+    color:#ea8039;
+     font-size:14px;
+    line-height: 18px;
+    letter-spacing: 0.15px;
+}
+
+.nav-bottom-links{
+  font-family: Verdana, sans-serif;
+  line-height: 19px;
+  font-size: 14px;
+  font-weight: 700;
   text-decoration: none;
-  display: flex;
-  align-items: right;
+  margin: 5px 5px 0px 5px;
+  box-sizing: border-box;
+  border-bottom: 3px solid transparent;
+  border-top: 3px solid transparent;
+  letter-spacing: 0.75px;
+
 }
 
-.header__link:hover {
-  text-decoration: none;
-  background-color:grey;
-  color: blue;
+.nav-bottom-links.active{
+  border-bottom:3px solid #ea8039;  
+
 }
+
+.nav-bottom-links:hover{
+border-bottom:3px solid #ea8039; 
+line-height: 19px;
+}
+
+.navbar .navbar-collapse {
+  text-align: center;
+}
+
+.navbar-toggler {
+  margin-top: 18px;
+  margin-bottom: 5px;
+  width: 100vw;
+  margin-right: 0;
+} 
