--- a/Front-end of bank/src/index.css
+++ b/Front-end of bank/src/index.css
@@ -3,7 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing:vertical-align;
   -moz-osx-font-smoothing: grayscale;
 }
 
