--- a/Front-end of bank/src/footer/Footer.css
+++ b/Front-end of bank/src/footer/Footer.css
@@ -1,5 +1,5 @@
 .footer{
- background-color: #414141;
+ background-color :#414141;
  width: 100%;
  text-align: left;
  font-family: sans-serif;
@@ -7,6 +7,14 @@
  font-size: 16px;
  padding:50px;
  margin-top: 50px;  
+}
+
+.footer .about{
+    line-height: 20px;
+    color:#C0C0C0;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0;
 }
 
 .footer .footer-left{
@@ -23,7 +31,7 @@
  width: 35px;
  height: 35px;
  cursor:pointer;
- background-color: #33383b;
+ background-color: 	#383838;
  border-radius: 2px;
  font-size: 20px;
  color: #ffffff;
@@ -32,3 +40,63 @@
  margin-right: 3px;
  margin-bottom: 5px;
 }
+
+.footer .footer-center{
+  width: 33%;
+  color: #C0C0C0;;
+ line-height: 20px;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0;
+  
+}
+
+.footer .footer-center i{
+    background-color: 			#383838;
+    color: #ffffff;
+    font-size: 23px;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 42px;
+    margin:10px 15px;
+    vertical-align: middle;
+}
+
+.footer .footer-right{
+    width: 33%;
+
+}
+
+.footer .menu{
+    text-decoration: none;
+    color:#C0C0C0;
+}
+
+.footer .menu a{
+    display: inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color:#C0C0C0;
+    font-size: 14px;
+    font-weight: normal;
+}
+
+.footer .menu a:hover{
+    color:#e7b152;
+}
+
+.footer .name{
+    color: #0090ff;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0;
+}
+
+@media(max-width:767px){
+    .footer{
+        font-size: 10px;
+    }
+}
+
